# ogier

./: .editorconfig  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: .prettierrc.json  base.ts  context.ts  custom.ts  filewise.ts  fluent.ts  invoke.ts  lib.ts  main.ts  modals.ts  my-modal.ts  reader.ts  readscreen.ts  strings.json  styler.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alter.rs  css.rs  epub.rs  error.rs  errors.rs  lib.rs  main.rs  menus.rs  mepub.rs  prefs.rs
src-tauri/src/epub/: mod.rs  package.rs
src-tauri/src/epub/testing/: bell.epub  descartes.epub  metadata.json
src-tauri/src/testing/: metadata.json  metadata.opf
src/modal/: base.ts  details.ts  fonts.ts  index.ts  nav.ts  preview.ts
tools/: copy_fluent_icons.ts  xtauri
